# pamarcar

./: .gitignore  docker-compose.yml
api/: Cargo.toml  Dockerfile  build.gradle  diesel.toml
api/src/: main.rs  schema.rs
api/src/config/: db.rs  mod.rs  mq.rs  route.rs
api/src/controller/: booking_controller.rs  calendar_controller.rs  mod.rs  user_controller.rs
api/src/helper/: api.rs  auth.rs
api/src/main/java/com/pamarcar/api/: ApiApplication.java
api/src/main/java/com/pamarcar/api/configuration/: RabbitMQConfiguration.java  SecurityConfiguration.java
api/src/main/java/com/pamarcar/api/controller/: ApartmentController.java  BookingController.java  GroupController.java  PlatformController.java  TravelerRegistryController.java  UserController.java
api/src/main/java/com/pamarcar/api/handler/: ResponseHandler.java
api/src/main/java/com/pamarcar/api/model/: Apartment.java  Booking.java  Device.java  DocumentType.java  Gender.java  Group.java  OnApartmentCreate.java  OnBookingCreate.java  OnDeviceCreate.java  OnGroupCreate.java  OnPlatformCreate.java  OnRoleCreate.java  OnTravelerRegistryCreate.java  OnUserCreate.java  Platform.java  Result.java  Role.java  TravelerRegistry.java  User.java
api/src/main/resources/: application.properties
api/src/middleware/: mod.rs  user_middleware.rs
api/src/model/: booking.rs  calendar.rs  mod.rs  plattform.rs  role.rs  user.rs
api/src/service/: booking_service.rs  calendar_service.rs  mod.rs  user_service.rs
api/src/test/java/com/pamarcar/api/: ApiApplicationTests.java
mailer/: Dockerfile  README.md  (+1 more)
(+88 files in other folders)
